Fix game img centered on desktop, prevent mobile img hover

--- a/css/mobile/mobile.css
+++ b/css/mobile/mobile.css
@@ -7,6 +7,10 @@
         bottom: 0;
     }
 
+    .game-image-wrapper {
+        justify-content: center;
+    }
+
     .game-image {
         width: 90%;
     }
