--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,61 @@
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
 }
 
+.level-relative {
+    position: relative;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+    width: 25vw;
+    color: white;
+    font-size: 1.8rem;
+}
+
+.level-bar {
+    height: 0.4rem;
+    background: linear-gradient(to right, lightgray, gray); /* Adjust colors as needed */    position: absolute;
+    top: -0.2rem;
+    z-index: -1;
+    width: 99%; /* Stop ends of bar being seen outside circles */
+}
+
+.level-progress-wrapper {
+    top: -0.2rem;
+    left: 48px;
+    right: 48px;
+    z-index: -1;
+    position: absolute;
+}
+
+.level-progress {
+    height: 0.4rem;
+    background: linear-gradient(to right, rgb(210, 178, 0), purple); /* Adjust colors as needed */    position: absolute;
+    box-shadow: 0 0 10px gold;
+    width: 0;
+    border-radius: 0 10px 10px 0;
+    transition: width 0.5s ease-out;
+}
+
+.xp-current {
+    height: 3rem;
+    aspect-ratio: 1;
+    background-color: rgb(210, 178, 0);
+    position: absolute;
+    top: -1.5rem;
+    border-radius: 50%;
+    left: 0;
+    box-shadow: 0 0 10px yellow;
+}
+
+.xp-needed {
+    height: 3rem;
+    aspect-ratio: 1;
+    background-color: gray;
+    position: absolute;
+    right: 0;
+    top: -1.5rem;
+    border-radius: 50%;
+}
+
 .game {
     position: fixed;
     inset: 0;
@@ -125,6 +180,6 @@
 
 .play-again {
     width: max-content;
-    margin-top: 2rem;
+    margin-top: 3rem;
     position: absolute;
 }
