Widen level bar on mobile

--- a/css/mobile/mobile.css
+++ b/css/mobile/mobile.css
@@ -30,6 +30,10 @@
         margin-bottom: 3rem;
     }
 
+    .level-relative {
+        width: 70vw;
+    }
+
     .game-stats { display: none; }
     .game-stats-mobile { display: flex; }
 
